--- a/atividade_03/src/main/resources/static/index.html
+++ b/atividade_03/src/main/resources/static/index.html
@@ -7,7 +7,19 @@
 </head>
 <body>
     <div align="center">
-        <a href="/book/register">Register Book</a>
+        <h1>Atividade 03 - Sérgio Vicente T. - RA: 183263</h1>
+        <h2>Profº Glauco Todesco</h2>
+        <h3>Programação Estruturada II</h3>
+        <br>
+        <br>
+        <br>
+        <a href="/book/all">Book</a>
+        <br>
+        <br>
+        <a href="/author/all">Author</a>
+        <br>
+        <br>
+        <a href="/publisher/all">Publisher</a>
     </div>
 </body>
 </html>
