--- a/atividade_03/src/main/resources/static/index.html
+++ b/atividade_03/src/main/resources/static/index.html
@@ -11,15 +11,9 @@
         <h2>Profº Glauco Todesco</h2>
         <h3>Programação Estruturada II</h3>
         <br>
-        <br>
-        <br>
-        <a href="/book/all">Book</a>
-        <br>
-        <br>
-        <a href="/author/all">Author</a>
-        <br>
-        <br>
-        <a href="/publisher/all">Publisher</a>
+        <h3><a href="/author/template">Author</a></h3>
+        <h3><a href="/book/template">Book</a></h3>
+        <h3><a href="/publisher/template">Publisher</a></h3>
     </div>
 </body>
 </html>
